test-policies-pass/validating/check-authorizer/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-authorizer-binding
spec:
  policyName: check-authorizer
  validationActions: [Deny]
