test-policies-pass/validating/check-authorizer/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: check-authorizer
spec:
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["configmaps"]
  matchConditions:
    - name: "is-configmap"
      expression: "object.kind == 'ConfigMap'"
  validations:
    - expression: |
        authorizer.group('').resource('pods').namespace('default').check('create').allowed()
      message: "User must have permission to create pods"
